--- a/src/Pages/Login/SocialLogin/SocialLogin.css
+++ b/src/Pages/Login/SocialLogin/SocialLogin.css
@@ -1,5 +1,8 @@
 .google-button{
-    background-color:darkgrey;
+    background-color:blueviolet;
+    border-radius: 10px;
+    padding: 10px;
+    font-size: 14px;
 }
 .google{
     
