--- a/src/Pages/Home/Inventory/Inventory.css
+++ b/src/Pages/Home/Inventory/Inventory.css
@@ -9,7 +9,7 @@
     color: blueviolet;
 }
 .mange-inventories{
-   background-color: blueviolet;
+   background-color:whitesmoke;
    padding:30px 80px;
   
 }
